Fixes css loading issue, adds areas for alternative input, minor css changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <head>
     <title>STIX Viewer</title>
-    <link rel="stylesheet" type="all" href="application.css" />
+    <link rel="stylesheet" type="text/css" href="application.css" />
   </head>
 
   <body>
@@ -13,7 +13,13 @@
 
     <div id="uploader">
       <p>Drop some STIX 2.0 here!</p>
-      <input type="file" id="files" name="files" />
+      <input type="file" id="files" name="files" /><br>
+      <p>-- OR --</p>
+      <textarea id="pasted" name="pasted" placeholder="Copy/Paste JSON data here..."></textarea><br>
+      <button id="parse-paste">Parse</button>
+      <p>-- OR --</p>
+      <input type="text" id="url" name="url" placeholder="Paste URL here" /><br>
+      <button id="fetch-url">Fetch</button>
     </div>
     <div id="canvas-container" style="display: none;">
       <div id="sidebar">
@@ -28,7 +34,9 @@
           </pre>
         </div>
       </div>
-      <svg id="canvas"></svg>
+      <div id="canvas-wrapper">
+        <svg id="canvas"></svg>
+      </div>
     </div>
   </body>
 
