Implements parsing STIX 2.0 from the textarea. Minor cosmetic changes.

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
       <p>Drop some STIX 2.0 here!</p>
       <input type="file" id="files" name="files" /><br>
       <p>-- OR --</p>
-      <textarea id="pasted" name="pasted" placeholder="Copy/Paste JSON data here..."></textarea><br>
-      <button id="parse-paste">Parse</button>
-      <p>-- OR --</p>
+      <p>Fetch some STIX 2.0 from this URL!</p>
       <input type="text" id="url" name="url" placeholder="Paste URL here" /><br>
       <button id="fetch-url">Fetch</button>
+      <p>-- OR --</p>
+      <p>Paste some STIX 2.0 here!</p>
+      <textarea id="paste-area" name="pasted" placeholder="Copy/Paste JSON data here..."></textarea><br>
+      <button id="paste-parser">Parse</button>
     </div>
     <div id="canvas-container" style="display: none;">
       <div id="sidebar">
