--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
       </div>
       <div id="canvas-wrapper">
         <svg id="canvas"></svg>
+        <p>Nodes are draggable! (Node will 'pin' on mouseup)</p>
+        <p>Double-click a pinned node to unpin it!</p>
       </div>
     </div>
   </body>
