--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <head>
     <title>STIX Viewer</title>
     <link rel="stylesheet" type="text/css" href="application.css" />
+    <style>
+      .selected {
+        filter: url(#drop-shadow);
+      }
+    </style>
   </head>
 
   <body>
