Reworks 'Selected Node' area to be more human-readable

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         </div>
         <div id="selected">
           <h2>Selected Node</h2>
-          <pre id="selection">
+          <div id="selection">
 
-          </pre>
+          </div>
         </div>
       </div>
       <div id="canvas-wrapper">
