Fixes drop-shadow cross-compatibility issues for *hopefully* the last time

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <head>
     <title>STIX Viewer</title>
     <link rel="stylesheet" type="text/css" href="application.css" />
+    <style>
+      .selected {
+        /* Drop-shadow SVG styling has to go here for compatibility reasons */
+        filter: url("#drop-shadow");
+      }
+    </style>
   </head>
 
   <body>
